	New generic functions.
	* clos-method1.lisp (method): Inherit from standard-stablehash.
	(initialize-instance-<standard-method>): Invoke
	shared-initialize-<standard-stablehash>.
	* clos-genfun2.lisp (std-add-method): Use remove-method, as specified
	by the MOP. Call add-direct-method for each specializer.
	(std-remove-method): Call remove-direct-method for each specializer.

2004-08-31  Bruno Haible  <bruno@clisp.org>

	* spvw.d (parse_options): Don't do destructive side effects on argv[].
	(main_actions): Update.

2004-08-31  Bruno Haible <bruno@clisp.org>

	* spvw.d (struct argv_actions): Remove argv_selection_array, add
	argv_init_files and argv_exprs.
	(parse_options, free_argv_actions): Update.
	(main_actions): New function, extracted from main().
	(main): Call main_actions.

2004-08-31  Bruno Haible  <bruno@clisp.org>

	* spvw.d (init_memory): New function, extracted from main().
	(main): Call init_memory.

2004-08-31  Bruno Haible  <bruno@clisp.org>

	* spvw_sigsegv.d (install_stackoverflow_handler): Define as a no-op
	when NOCOST_SP_CHECK is not defined.
	* spvw.d (main): Call install_stackoverflow_handler a little later.

2004-08-31  Bruno Haible  <bruno@clisp.org>

	Assume the OS manages the C stack sufficiently well.
	* lispbibl.d (NO_SP_MALLOC): Remove macro.
	* spvw.d (usage): Remove documentation of option -s.
	(struct argv_initparams): Remove argv_stackneed.
	(parse_options): Drop support for option -s.
	(main): Don't reserve space for SP. Don't call setSP.
	* doc/clisp.xml.in: Remove documentation of option -s.

2004-08-31  Bruno Haible  <bruno@clisp.org>

	Remove support for MiNT.
	* lispbibl.d (UNIX_MINT): Remove macro.
	* pathname.d (realpath): Remove MiNT support.
	* stream.d (clear_tty_input): Assume FREAD is defined when TIOCFLUSH is
	defined.
	(clear_tty_output): Assume FWRITE is defined when TIOCFLUSH is defined.

2004-08-30  Bruno Haible  <bruno@clisp.org>

	* spvw.d (program_name): Change type to 'const char *'.